[project]
name = "aoc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adventofcode>=25.2",
    "numpy>=2.3.5",
    "pulp>=3.3.0",
    "python-sat>=1.8.dev24",
    "scipy>=1.16.3",
    "scipy-stubs>=1.16.3.3",
    "sympy>=1.14.0",
]
